sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:27: error: illegal start of simple expression
  }
  ^