sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i=0
  var j=0
  var echanges=0
  for (i<- 1 to getNombreValeurs()-1){
    echanges=0
    j=i
    while (echanges!=1 && j!=0){
      if (plusPetit(j-1,j)==false){
        echange(j-1,j)
        j=j-1
      }
      else {
        echanges=1
      }
    }
  }
}

def triparinsertion(){
  var a=getNombreValeurs()
  for (i<- 1 to a-1){
    var v=getNombreValeur(i)
    var j=i
    while (j>0 && getValeur)
  }
}